Fixed spacing on home page

--- a/portfolio/src/components/AboutMe/AboutMe.css
+++ b/portfolio/src/components/AboutMe/AboutMe.css
@@ -2,7 +2,6 @@
 .about-wrapper {
     color: #fff;
     text-align: center;
-    padding: 5%;
     position: relative;
     padding-bottom: 3px;
 }
