--- a/portfolio/src/components/Skills/Skills.css
+++ b/portfolio/src/components/Skills/Skills.css
@@ -1,7 +1,6 @@
 
 .skills-wrapper {
     color: #fff;
-    padding: 5%;
     position: relative;
     text-align: center;
     height: 70vh;
